--- a/html/001-intro_bio.html
+++ b/html/001-intro_bio.html
@@ -24,4 +24,4 @@ Bio as of 3 July 2020. </p>
 
 <hr />
 
-<p><a href="empty">Previous:empty</a> <a href="001-intro_bio.md">Top:001</a> <a href="002-origins.html">Next:002</a></p>
+<p><a href="empty">Previous:empty</a> <a href="001-intro_bio.md">Top:001</a> <a href="002-origins.md">Next:002</a></p>
